[package]
name = "interns"
description = "Object interner"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.3.0"
edition = "2024"
license = "MIT"
readme = "README"
repository = "https://git.saulv.es/interner"

[dependencies.hashbrown]
version = ">=0.15.2"
default-features=false
features = ["raw-entry", "inline-more"]
optional = true

[features]
default = []
hashbrown = ["dep:hashbrown"]
