[package]
name = "interns"
description = "Object interner"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-only"
readme = "README"
repository = "https://github.com/saulvaldelvira/interner"

[dependencies.hashbrown]
version = ">=0.15.2"
default-features=false
features = ["raw-entry", "inline-more"]
